fix overflow styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0 auto;
+  margin: 0 6.5%;
   width: 1440px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -54,13 +54,16 @@ header img:hover,
   display: flex;
   margin-top: 26px;
   font-size: 16px;
-  text-align: center;
   text-transform: uppercase;
 }
 
 .menu ul li:nth-child(2),
 .menu ul li:nth-child(3) {
-  margin-left: 32px;
+  margin-left: 20%;
+}
+
+.menu ul li {
+  width: 40%;
 }
 
 .chosen {
@@ -72,8 +75,7 @@ header img:hover,
   display: block;
   margin-top: 30px;
   height: 1px;
-  width: 65px;
-  padding: 0 12px;
+  width: 100%;
   background: #5ECE7B;
 }
 
@@ -126,7 +128,7 @@ header img:hover,
   font-weight: normal;
   font-size: 42px;
   line-height: 160%;
-  margin-top: 80px;
+  margin-top: 50px;
 }
 
 .products-wrapper {
@@ -333,6 +335,7 @@ header img:hover,
 
 .cart-overlay__product-wrapper {
   display: flex;
+  overflow: hidden;
 }
 
 .cart-overlay__products-wrapper {
@@ -516,6 +519,7 @@ header img:hover,
 
 .bag-page-wrapper h1 {
   text-align: left;
+  margin-top: 50px;
 }
 
 .bag-page__product-amount-info {
